--- a/LastModifiedViews.html
+++ b/LastModifiedViews.html
@@ -63,11 +63,11 @@
                                              class="padLR">
                                         </div>
 
-                                        <div style="width:2%;" class="padLR"
+<!--                                         <div style="width:2%;" class="padLR"
                                              ng-if="tab.Title=='COMPONENTS' || tab.Title=='SERVICES'">
                                             <div style="width:80%;">
                                             </div>
-                                        </div>
+                                        </div> -->
 
                                         <div style="width:12%;" class="padLR"
                                              ng-if="tab.Title!='FOLDERS'&&tab.Title!='DOCUMENTS'&& tab.Title!='COMPONENTS'&&tab.Title!='SERVICES'">
