--- a/LastModifiedViews.html
+++ b/LastModifiedViews.html
@@ -291,7 +291,7 @@
                                                      ng-src="{{baseUrl}}/SiteCollectionImages/ICONS/Shareweb/small_project.png">
                                                 {{item.Shareweb_x0020_ID}}
                                             </div>
-                                            <div class="padLR" style="width:2%;"
+<!--                                             <div class="padLR" style="width:2%;"
                                                  ng-if="tab.Title!='FOLDERS' &&tab.Title!='DOCUMENTS' && tab.Title!='COMPONENTS'&& tab.Title!='SERVICES' ">
                                                 <span ng-show="item.Item_x0020_Type=='Component' ">
                                                     <img class="icon-sites-img " ng-src="{{item.siteIcon1}} " />
@@ -302,7 +302,7 @@
                                                 <span ng-show="item.Item_x0020_Type=='Feature' ">
                                                     <img  class="icon-sites-img " ng-src="{{item.siteIcon3}} " />
                                                 </span>
-                                            </div>
+                                            </div> -->
 
 
                                             <div class="padLR" style="width:23%;">
